# azure-sandbox

./: CMakeLists.txt  Doxyfile.in  azure-pipelines.yml  dummy.pfx  test-template.yml  test.cpp  test.txt  test_winhttp.cpp
doc/: CMakeLists.txt  sandbox.dox
